# pySwitchbee

./: .gitignore  MANIFEST.in  README.md  pyproject.toml  setup.py
scripts/: discover.py  sb.py  switchbee_cli.py  switchbee_rpc_cli.py
src/switchbee/: __init__.py  const.py  utils.py
src/switchbee/api/: __init__.py  central_unit.py  polling.py  wsrpc.py
src/switchbee/central_unit/: __init__.py
src/switchbee/device/: __init__.py
src/switchbee/wsrpc_api/: __init__.py
switchbee/: README.md  __init__.py  const.py
tests/resources/: GET_CONFIGURATION.json
